# robot-arm-planner-cpp

./: CMakeLists.txt
.github/workflows/: cpp-ci.yml
include/math/: matrix2.hpp  matrix3.hpp  se2.hpp  se3.hpp  vector2.hpp  vector3.hpp
include/robot/: ik_2d.hpp  jacobian_2d.hpp  robot_arm_2d.hpp
src/: main.cpp  test_ik_2d.cpp  test_jacobian_2d.cpp  test_matrices.cpp  test_robot_arm_2d.cpp  test_se2.cpp  test_se3.cpp  test_vectors.cpp
